examples/fargate-sidecar-injector-mwh.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/client
    helm.sh/hook: post-install
    helm.sh/hook-weight: "-5"
  generation: 1
  labels:
    app.kubernetes.io/instance: fargate-sidecar-injector
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fargate-sidecar-injector
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: fargate-sidecar-injector-0.1.0
  name: fargate-sidecar-injector
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: fargate-sidecar-injector
      namespace: default
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: fargate-sidecar-injector.default.svc
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
